# COtt

./: CMakeLists.txt  README.md
examples/: finite_ccs.cpp  uint_arithmetics.cpp
include/: operational_semantics.h
include/operational_semantics/: has_equality.h  is_hashable.h  language_semantics.h  small_step_semantics.h
